--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>VCard QR Generator</title>
-  <link rel="icon" type="image/png" href="C:\Users\Yeuh1\Desktop\testVc\images\QRlogo.png">
+  <link rel="icon" type="image/png"\images\QRlogo.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <script src="https://cdn.jsdelivr.net/npm/qrious@4.0.2/dist/qrious.min.js"></script>
@@ -12,7 +12,7 @@
 <body>
   <main class="container">
     <header class="header">
-      <img src="C:\Users\Yeuh1\Desktop\testVc\images\QRlogo.png" alt= "Logo" class="brand-logo" id="mainLogo">
+      <img src="images\QRlogo.png" alt= "Logo" class="brand-logo" id="mainLogo">
       <h1>VCard & QR Generator</h1>
     </header>
 
@@ -104,7 +104,7 @@
         <div class="qr-area">
           <div class="qr-wrapper">
             <canvas id="qrCanvas" width="260" height="260"></canvas>
-            <img id="qrLogo" src="C:\Users\Yeuh1\Desktop\testVc\images\image1.png" alt="logo" class="qr-logo">
+            <img id="qrLogo" src="images\image1.png" alt="logo" class="qr-logo">
           </div>
           <p id="qrHint">Generate QR code to see preview</p>
         </div>
@@ -119,3 +119,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
