--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <form id="vcardForm" class="form">
       <div class="grid">
         <label>First Name <input type="text" id="firstName" placeholder="John" required></label>
-        <label>Last Name <input type="text" id="lastName" placeholder="Lee" required></label>
+        <label>Sure Name <input type="text" id="lastName" placeholder="Lee" required></label>
         <label>Company <input type="text" id="company" placeholder="Makcorp Inc."></label>
         <label>Job Title <input type="text" id="title" placeholder="Manager"></label>
         <label>Phone <input type="tel" id="phone" placeholder="+90 555 555 5555" required></label>
@@ -119,4 +119,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
